tests/ui/typeck/issue-91334.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-91334.rs:6:23
   |
LL | fn f(){||yield(((){),
   |       -       -    - ^
   |       |       |    |
   |       |       |    missing open `(` for this delimiter
   |       |       unclosed delimiter
   |       unclosed delimiter

error: aborting due to 1 previous error

