tests/ui/typeck/issue-91334.rs
// Regression test for the ICE described in issue #91334.

//@error-in-other-file: this file contains an unclosed delimiter

#![feature(generators)]

fn f(){||yield(((){),
